Closed Bug 219389 Opened 21 years ago Closed 21 years ago

View\Syntax Highlighting in Menu Bar in ViewSource does nothing

Categories

(Core Graveyard :: View Source, defect, P1)

x86
Windows XP

Tracking

(Not tracked)

VERIFIED FIXED
mozilla1.6alpha

People

(Reporter: vedran, Assigned: benjamin)

References

Details

(Keywords: regression, Whiteboard: [win32 installer builds only])

Attachments

(1 file)

This regreesion occured somewhere between 2003091209 and 2003091604.
Source is no longer highlited in ViewSource.
I have tried creating new profile, but it didn't fix that.
.
Summary: Source highlighting pref does nothing in ViewSource → View\Syntax Highlighting in Menu Bar in ViewSource does nothing
> This regreesion occured somewhere between 2003091209 and 2003091604.

Could you narrow down the regression range while these builds are still
available on the FTP server?
I am not quite sure, because I haven't noticed any windows builds between these
two dates in -trunk folders. Perhaps I missed some?
The mid-day dirs (-13, -14, -15) have some experimental svg/mathml win32 builds
that could probably be used to test this....
wfm 2003091510 zip
WFM 9/17-04, XP.  (As far as I can recall it's never stopped working.)
I will try that build then.
I probably broke this with bug 179834... something with viewsource.css probably.
looking.
Depends on: 179834
Priority: -- → P1
Whiteboard: [win32 installer builds only]
Target Milestone: --- → mozilla1.6alpha
Simple fix.
Attachment #131603 - Flags: superreview?(darin)
Attachment #131603 - Flags: review?(axel)
.
Assignee: doronr → bsmedberg
for the record, XMLPrettyPrint.css was part of my first checkin, but LXR hasn't
gotten around to picking those changes up yet.
Attachment #131603 - Flags: superreview?(darin) → superreview+
fixed on trunk
.
Status: NEW → RESOLVED
Closed: 21 years ago
Resolution: --- → FIXED
Status: RESOLVED → VERIFIED
Product: Browser → Seamonkey
Product: SeaMonkey → Core Graveyard
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: