Bug 219389 - ViewSource highlighting broken (from bug 179834) r=pike sr=darin